--- a/Cadastro.html
+++ b/Cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro</title>
+    <title>Formulário de cadastro</title>
 </head>
 <body>
     <center>
@@ -12,13 +12,13 @@
         <label for="user"><b>Nome:</b> </label>
         <input id="user" type="text" placeholder="nome" />
         <br /> <br />
-        <label for="e-mail"><b>E-mail:</b></label>
-        <input id="e-mail" type="text" placeholder="adddd@" />
+        <label for="email"><b>E-mail:</b></label>
+        <input id="email" type="email" placeholder="name@exemple.com" />
         <br /> <br />
         <label for="senha"><b>Senha:</b></label>
         <input id="senha" type="password" />
         <br /> <br />
-        <button href="Cadastro.html">Cadastrar</button>
+        <button type="submit">Cadastrar</button>
     </form>
     </center>
 </body>
